fixing readability

--- a/final/home.css
+++ b/final/home.css
@@ -339,6 +339,7 @@ You can adjust the min-width numbers below, and add as many new media queries as
         margin-right: 10px;
         font-size: 10px;
         border: 3px solid #FF7BD0;
+        color: #FFFF00;
         height: auto;
     }
 
@@ -397,6 +398,7 @@ You can adjust the min-width numbers below, and add as many new media queries as
         margin-right: 10px;
         font-size: 13px;
         border: 5px solid #FF7BD0;
+        color: #FFFF00;
     }
 
     .paragraph.huge {
@@ -453,6 +455,7 @@ You can adjust the min-width numbers below, and add as many new media queries as
         margin-left: 80px;
         margin-right: 80px;
         border: 5px solid #FF7BD0;
+        color: #FFFF00;
     }
 
     .paragraph.huge {
